# mermaid_validator_rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_zh.md  config.json  devplan.md
benches/: mermaid_bench.rs
docs/performance/: PERFORMANCE.md  PERFORMANCE_INDEX.md  PERFORMANCE_REPORT.md
ralph/: prd.json
src/: cli_runner.rs  lib.rs  main.rs  preview_validator.rs  response_builder.rs  server.rs
tests/: mermaid_validator_tests.rs  preview_validator_tests.rs
tools/perf/: perf_report.sh  profile_flamegraph.sh  quick_bench.sh
tools/perf/examples/: flamegraph_test.rs
