[package]
name = "mermaid_validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
rmcp = { version = "0.14.0", features = ["server", "transport-io"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util"] }
serde = { version = "1.0.217", features = ["derive"] }
schemars = "1.2.1"
base64 = "0.22.1"
thiserror = "2.0.11"
serde_json = "1.0.149"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mermaid_bench"
harness = false
